# a2auidemo

./: .gitignore  README.md  start.sh
agent/: .env.example  __main__.py  agent.py  agent_executor.py  prompt_builder.py  pyproject.toml  sub_agents.py  tools.py
agent/examples/0.9/: account_list.json  transaction_list.json  transfer_confirmation.json  transfer_form.json
client/: a2ui-renderer.js  app.js  index.html  package-lock.json  package.json  styles.css
client/src/: App.css  App.tsx  catalog.ts  main.tsx
client/src/api/: agent.ts
client/src/components/: A2UISurfaceMessage.tsx  DebugPanel.tsx  Footer.tsx  Header.tsx  Welcome.tsx
client/src/hooks/: useChat.ts
mock_server/: main.py  pyproject.toml
