[project]
name = "a2ui-bank-assistant"
version = "0.1.0"
description = "A bank assistant agent using A2UI for rich UI generation"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.0,<1.0.0",
    "click>=8.1.8",
    "google-adk>=1.28.1",
    "google-genai>=1.27.0",
    "python-dotenv>=1.1.0",

    "jsonschema>=4.0.0",
    "a2ui-agent-sdk",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
a2ui-agent-sdk = { git = "https://github.com/google/A2UI.git", subdirectory = "agent_sdks/python" }
